<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="500.0dip">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip">

                <TextView
                    android:id="@+id/NationalId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Nationalid" />

                <EditText
                    android:id="@+id/txtnationalid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/Nationalid"
                    android:inputType="textAutoComplete" />
            </TableRow>

            <RelativeLayout
                android:id="@+id/loanlayout"
                android:layout_marginTop="10.0dip">

                <TextView
                    android:id="@+id/sourceinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Loan"
                    android:textColor="@android:color/holo_green_dark" />

                <ProgressBar
                    android:id="@+id/ploans"
                    android:layout_width="wrap_content"
                    android:layout_height="25.0dip"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:visibility="gone" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2.0dip"
                android:background="@android:color/holo_green_dark" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip">

                <TextView
                    android:id="@+id/LoanNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Loanno" />

                <TextView
                    android:id="@+id/txtloanno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/Loanno"
                    android:textColor="@android:color/holo_green_dark" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip">

                <TextView
                    android:id="@+id/TvLoantype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loantype" />

                <TextView
                    android:id="@+id/txtloantype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/loantype"
                    android:textColor="@android:color/holo_green_dark" />
            </TableRow>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2.0dip"
                android:layout_marginTop="20.0dip"
                android:background="@android:color/holo_green_dark" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip">

                <TextView
                    android:id="@+id/TVAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount" />

                <EditText
                    android:id="@+id/txtamount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/amount"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip">

                <Button
                    android:id="@+id/Cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cancel" />

                <Button
                    android:id="@+id/Confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="Confirm" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>