<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="20.0dip"
    android:paddingRight="20.0dip">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50.0dip">

            <TextView
                android:id="@+id/NationalId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nationalid" />

            <EditText
                android:id="@+id/txtnationalid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:hint="@string/Nationalid"
                android:inputType="textAutoComplete" />
        </TableRow>

        <RelativeLayout android:layout_marginTop="10.0dip">

            <TextView
                android:id="@+id/accountinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Account Info"
                android:textColor="@android:color/holo_green_dark" />

            <ProgressBar
                android:id="@+id/paccdetails"
                android:layout_width="wrap_content"
                android:layout_height="25.0dip"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2.0dip"
            android:background="@android:color/holo_green_dark" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip">

            <TextView
                android:id="@+id/AccountNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountno" />

            <TextView
                android:id="@+id/txtaccountno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:hint="@string/accountno"
                android:textColor="@android:color/holo_green_dark" />

            <ProgressBar
                android:id="@+id/paccno"
                android:layout_height="25.0dip"
                android:layout_gravity="right"
                android:visibility="gone" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip">

            <TextView
                android:id="@+id/TvAccountName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountname" />

            <TextView
                android:id="@+id/txtaccountname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:hint="@string/accountname"
                android:textColor="@android:color/holo_green_dark" />

            <ProgressBar
                android:id="@+id/paccname"
                android:layout_height="25.0dip"
                android:layout_gravity="right"
                android:visibility="gone" />
        </TableRow>

        <TextView
            android:id="@+id/Info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:gravity="center"
            android:textColor="@android:color/holo_green_dark" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2.0dip"
            android:layout_marginTop="20.0dip"
            android:background="@android:color/holo_green_dark" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip">

            <TextView
                android:id="@+id/TVAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/txtamount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:hint="@string/amount"
                android:inputType="number" />
        </TableRow>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="50.0dip"
                android:text="Cancel" />

            <Button
                android:id="@+id/Confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/Cancel"
                android:layout_toStartOf="@+id/Cancel"
                android:text="Confirm" />
        </LinearLayout>
    </TableLayout>
</ScrollView>